--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "autoprefixer": "6.4.1",
     "babel-runtime": "6.11.6",
     "classnames": "2.2.5",
+    "d3": "4.4.0",
+    "d3-cloud": "1.2.1",
     "express": "4.14.0",
     "lodash": "4.15.0",
     "moment": "2.11.1",
