--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "raven-js": "3.6.1",
     "react": "15.3.1",
     "react-dom": "15.3.1",
+    "react-addons-css-transition-group": "15.3.1",
     "react-hot-loader": "3.0.0-beta.2",
     "react-redux": "4.4.5",
     "react-responsive": "1.2.1",
