--- a/package.json
+++ b/package.json
@@ -88,10 +88,12 @@
     "react-dom": "15.3.1",
     "react-addons-css-transition-group": "15.3.1",
     "react-hot-loader": "3.0.0-beta.2",
+    "react-on-visible": "1.1.0",
     "react-redux": "4.4.5",
     "react-responsive": "1.2.1",
     "react-router": "2.7.0",
     "react-router-redux": "4.0.5",
+    "react-visibility-sensor": "3.6.2",
     "redux-thunk": "2.1.0",
     "redux": "3.5.2",
     "redux-logger": "2.6.1",
