--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-dom": "15.3.1",
     "react-hot-loader": "3.0.0-beta.2",
     "react-on-visible": "1.1.0",
+    "react-progressive-image": "0.1.2",
     "react-redux": "4.4.5",
     "react-responsive": "1.2.1",
     "react-router": "2.7.0",
